fix: gap

--- a/pegasus/styles/Subsite.css
+++ b/pegasus/styles/Subsite.css
@@ -1,5 +1,6 @@
 .subsite-followers {
     display: flex;
+    gap: 4px;
     flex-direction: column;
     align-items: flex-start;
 }
